syntax = "proto3";

service ToggleService {
  rpc ListToggle(ListToggleRequest) returns (ListToggleResponse);
  rpc GetToggle(GetToggleRequest) returns (Toggle);
  rpc GetToggleValue(GetToggleValueRequest) returns (GetToggleValueResponse);
  rpc CreateToggle(CreateToggleRequest) returns (ToggleOperationResponse);
  rpc DeleteToggle(GetToggleRequest) returns (ToggleOperationResponse);
}

message ReqUser {
  string rolloutKey = 1;
  map<string, string> attributes = 2;
}

message Toggle{
  int64 id = 1;
  int64 projectId = 2;
  bool enabled = 3;
  string title = 4;
  string key = 5;
  string description = 6;
  string valueType = 7;
  int64 defaultValue = 8;
  int64 disabledValue = 9;
  int64 createTime = 10;
  int64 updateTime = 11;
  repeated ToggleValue values = 12;
}

message ToggleOperationResponse{
  int64 id = 1;
}

message ToggleValue{
  optional int64 id = 1;
  string title = 2;
  string value = 3;
  string description = 4;
}

message ListToggleRequest{
  int64 projectId = 1;
  int64 index = 2;
  int64 size = 3;
}

message ListToggleResponse{
  int64 total = 1;
  repeated ListItemToggle toggles = 2;
}

message ListItemToggle{
  int64 id = 1;
  bool enabled = 2;
  string title = 3;
  string key = 4;
  string description = 5;
  string valueType = 6;
}

message GetToggleRequest{
  int64 id = 1;
}

message GetToggleValueRequest{
  ReqUser reqUser = 1;
  string projectKey = 2;
  string toggleKey = 3;
  string toggleType = 4;
}

message GetToggleValueResponse{
  string toggleKey = 1;
  string resultValue = 2;
}

message CreateToggleRequest{
  int64 projectId = 1;
  bool enabled = 2;
  string title = 3;
  string key = 4;
  string description = 5;
  string valueType = 6;
  int64 defaultValue = 7;
  int64 disabledValue = 8;
  repeated ToggleValue values = 9;
}
